fix of pres forecast numbers in R, add citation to text

--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -894,11 +894,11 @@ elections in this dataset.\footnote{The predictions by Cuz\`an for
 
 \end{tabular}
 \end{center}
-Forecasts were published prior to each election by \textbf{F}air, \textbf{A}bramowitz, \textbf{C}ampbell, \textbf{H}ibbs, \textbf{L}ewis-\textbf{B}eck and \textbf{R}ice (1992), Lewis-Beck and \textbf{T}ien  (1996-2008),   \textbf{L}ockerbie, \textbf{Hol}brook, \textbf{E}rikson and \textbf{W}lezien and \textbf{Cuz}\`an and Bundrick.  Data were taken from the collation presented at \url{http://fivethirtyeight.blogs.nytimes.com/2012/03/26/models-based-on-fundamentals-have-failed-at-predicting-presidential-elections/}. FLORIAN: WE NEED TO VERIFY ALL OF THESE NUMBERS AND ADD CITATIONS TO THE RELEVANT WORK ... FOOTNOTE?
+Forecasts were published prior to each election by \textbf{F}air, \textbf{A}bramowitz, \textbf{C}ampbell, \textbf{H}ibbs, \textbf{L}ewis-\textbf{B}eck and \textbf{R}ice (1992), Lewis-Beck and \textbf{T}ien  (1996-2008),   \textbf{L}ockerbie, \textbf{Hol}brook, \textbf{E}rikson and \textbf{W}lezien and \textbf{Cuz}\`an and Bundrick.  Data were taken from the collation presented at \url{http://fivethirtyeight.blogs.nytimes.com/2012/03/26/models-based-on-fundamentals-have-failed-at-predicting-presidential-elections/}. FH: VERIFIED OR FIXED NUMBERS IN R BUT NEED TO RERUN ANALYSIS AND CHANGE TABLE, STILL TRYINT TO FIND 1992 NUMBERS
 \end{table}
 
 
-Using the forecasts shown in Table 1\footnote{CITATION FOR Numbers here: \citep{LewisBeckTien:1996,EriksonWlezien:1996}}, we fit an EBMA model with
+Using the forecasts shown in Table 1\footnote{The out-of-sample predictions for these models were collected from the individual journal articles, personal websites and symposia introductions. When multiple forecasts were made we used the authors' preferred forecast, or took the mean if no preference was given \citep{Hibbs:1992,Hibbs:2000,Campbell:2001,Hibbs:2004,Campbell:2004,Campbell:2005,LewisBeckTien:1996,EriksonWlezien:1996,Campbell:2008a,Fair:2012}.}, we fit an EBMA model with
 $c=0.05$.  The model weights and in-sample fit statistics for the
 ensemble and its components are shown in Table~\ref{presModel}.  As
 can be seen, the EBMA model assigns the majority of weight to the
