--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -2,12 +2,95 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Florian Hollenbach at 2013-01-27 19:59:08 -0500 
+%% Created for Florian Hollenbach at 2013-01-27 21:59:37 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{Fair:2012,
+	Author = {Fair, Ray C.},
+	Date-Added = {2013-01-28 02:58:27 +0000},
+	Date-Modified = {2013-01-28 02:59:37 +0000},
+	Note = {\url{http://fairmodel.econ.yale.edu/} (accessed january 27, 2013)},
+	Title = {Personal Website}}
+
+@article{Campbell:2008a,
+	Author = {Campbell, James E.},
+	Date-Added = {2013-01-28 02:52:54 +0000},
+	Date-Modified = {2013-01-28 02:53:49 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {679-81},
+	Title = {Editor's Introduction: Forecasting the 2008 National Elections},
+	Volume = {41},
+	Year = {2008}}
+
+@article{Campbell:2004,
+	Author = {Campbell, James E.},
+	Date-Added = {2013-01-28 02:42:11 +0000},
+	Date-Modified = {2013-01-28 02:45:14 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {4},
+	Pages = {733 - 735},
+	Title = {Introduction---The 2004 Presidential Election Forecasts },
+	Volume = {37},
+	Year = {2004}}
+
+@article{Campbell:2005,
+	Author = {Campbell, James E.},
+	Date-Added = {2013-01-28 02:39:10 +0000},
+	Date-Modified = {2013-01-28 02:43:47 +0000},
+	Journal = {PS: Political Science \& Politics},
+	Number = {1},
+	Pages = {23-24},
+	Title = {Introduction---Assessments of the 2004 Presidential Vote Forecasts},
+	Volume = {38},
+	Year = {2005}}
+
+@article{Campbell:2001,
+	Author = {Campbell, James E.},
+	Date-Added = {2013-01-28 02:23:41 +0000},
+	Date-Modified = {2013-01-28 02:24:37 +0000},
+	Journal = {American Politics Research},
+	Number = {3},
+	Pages = {275--278},
+	Title = {Taking Stock of the Forecasts of the 2000 Presidential Election},
+	Volume = {29},
+	Year = {2001}}
+
+@unpublished{Hibbs:2004,
+	Author = {Hibbs, Douglas A.},
+	Date-Added = {2013-01-28 02:15:26 +0000},
+	Date-Modified = {2013-01-28 02:16:37 +0000},
+	Note = {http://www.douglas-hibbs.com/Elections2004-00-96-92/election2004.pdf (accessed Jan. 27, 2013)},
+	Title = {Implications of the `Bread and Peace Model' of US Presidential Voting for the 2004 Election Outcome},
+	Year = {2004}}
+
+@unpublished{Hibbs:2000a,
+	Author = {Hibbs, Douglas A.},
+	Date-Added = {2013-01-28 01:08:21 +0000},
+	Date-Modified = {2013-01-28 02:15:15 +0000},
+	Note = {\url{http://www.douglas-hibbs.com/Elections2004-00-96-92/website_000830.pdf} (accessed Jan. 27, 2013)},
+	Title = {The Economy and the Year 2000 U.S. Presidential Election},
+	Year = {2000}}
+
+@unpublished{Hibbs:1996,
+	Author = {Hibbs, Douglas A.},
+	Date-Added = {2013-01-28 01:07:23 +0000},
+	Date-Modified = {2013-01-28 01:08:08 +0000},
+	Note = {\url{http://www.douglas-hibbs.com/Elections2004-00-96-92/clintn96.pdf} (accessed Jan. 27, 2013)},
+	Title = {The Economy and the 1996 Presidential Election: Why Clinton Will Win with Probability Exceeding 90%},
+	Year = {1992}}
+
+@unpublished{Hibbs:1992,
+	Author = {Hibbs, Douglas A.},
+	Date-Added = {2013-01-28 01:06:23 +0000},
+	Date-Modified = {2013-01-28 01:07:11 +0000},
+	Note = {\url{http://www.douglas-hibbs.com/Elections2004-00-96-92/forecast92.pdf} (accessed Jan. 27, 2013)},
+	Title = {THE 1992 PRESIDENTIAL ELECTION: Clinton is the Probable Winner, but Only Narrowly, Getting Just over 51 Percent of the Two-Party Vote},
+	Year = {1992}}
 
 @article{EriksonWlezien:1996,
 	Author = {Wlezien, Christopher and Erikson, Robert S. },
@@ -990,6 +1073,7 @@
 
 @article{Hibbs:2000,
 	Author = {Hibbs, Douglas A.},
+	Date-Modified = {2013-01-28 02:15:15 +0000},
 	Journal = {Public Choice},
 	Number = {1},
 	Pages = {149--180},
